# WildVision-Arena

./: .gitignore  2024-06-28-conv.json  GCP.md  INSTALL.md  LICENSE  MODEL_WORKERS.md  Model_Worker.md  README.md  WV-ARENA.md  arena-test.yml  elo_results.pkl  image_elo_results.pkl  image_leaderboard.csv  img_web.py  leaderboard.csv  pyproject.toml  requirements.txt  test.py  video_elo_results.pkl  video_leaderboard.csv  wildvision-arena.yml
arena/: constants.py  conversation.py  utils.py
arena/model/: __init__.py  model_adapter.py  model_lita.py  model_llava.py  model_llavanext.py  model_registry.py  model_tinyllava.py  model_videollama2.py  model_videollava.py
arena/serve/: api_provider.py  base_model_worker.py  cli.py  controller.py  gradio_block_arena_anony.py  gradio_block_arena_anony_bench.py  gradio_block_arena_anony_video.py  gradio_block_arena_anony_withsafety.py  gradio_block_arena_named.py  gradio_block_arena_show_failures.py  gradio_web_server.py  gradio_web_server_multi.py  gradio_web_server_multi_new.py  huggingface_api.py  huggingface_api_worker.py  inference.py  launch_all_serve.py  mllm_model_worker.py  mlx_worker.py  model_worker.py  multi_model_worker.py  openai_api_server.py  register_worker.py  shutdown_serve.py  test_message.py  test_throughput.py  vllm_worker.py
arena/serve/monitor/: basic_stats.py  clean_battle_data.py  clean_chat_data.py  (+6 more)
inference/: test_llavavid.py  test_videollama2.py  test_videollava.py
model_config/: cogvlm_requirements.txt  deepseek_vl.yml  lita.yml  videollava.yml  yi_vl.yml
scripts/: get_latest_local_gradio_port.py  recompute_elo.sh  restart_gradio.sh  restart_models.sh  restart_models_video.sh  run_bore.sh  test_bore.sh  update_space_url.py  upload_precompute_hf.py  upload_woprecompute_hf.py  watch_update_url.sh
(+80 files in other folders)
