[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wildvision"
version = "0.2.35"
description = "An open platform for benchmarking multimodal large language model based chatbots in the wild."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "aiohttp", "fastapi", "httpx", "markdown2[all]", "nh3", "numpy",
    "prompt_toolkit>=3.0.0", "pydantic<2,>=1", "requests", "rich>=10.0.0",
    "shortuuid", "tiktoken", "uvicorn", "fire", "datasets", 
]

[project.optional-dependencies]
model_worker = ["accelerate>=0.21", "peft", "sentencepiece", "torch", "torchvision", "einops", "transformers>=4.31.0", "protobuf", "psutil", 'openai', 'attrdict', 'timm', 'google-generativeai', 'anthropic']
vision_arena = ["plotly"]
vision_bench = ["datasets","tiktoken", "fire", 'reka-api', 'prettytable']
webui = ["gradio"]
video_arena = ["decord", "opencv-python", "torchvision"]
train = ["einops", "flash-attn>=2.0", "wandb"]
llm_judge = ["anthropic>=0.3", "ray", "polyglot", "pycld2", "morfessor", "scikit-learn"]
dev = ["black==23.3.0", "pylint==2.8.2", "icecream", "Pillow", 'openai']
api = ["openai", "google-generativeai"]

[project.urls]
"Homepage" = "https://github.com/lm-sys/fastchat"
"Bug Tracker" = "https://github.com/lm-sys/fastchat/issues"

[tool.setuptools.packages.find]
include = ["arena*", "model_config*"]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
